--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/fon_activity">
 
 
     <android.support.constraint.ConstraintLayout
@@ -18,6 +19,10 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="GET"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            android:background="@drawable/roundedbutton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.111"
             app:layout_constraintStart_toEndOf="@+id/etPutCity"
@@ -30,7 +35,10 @@
             android:layout_marginStart="108dp"
             android:layout_marginTop="8dp"
             android:ems="10"
-            android:hint="Put your city here"
+            android:hint="Put your city"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+
             android:inputType="textPersonName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -42,7 +50,10 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="124dp"
             android:layout_marginTop="8dp"
-            android:text="20"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+
             android:textSize="40dp"
             app:layout_constraintEnd_toStartOf="@+id/ivIcon"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,10 +63,14 @@
             android:id="@+id/tvDesc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="24dp"
             android:layout_marginEnd="8dp"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+
             android:layout_marginStart="8dp"
-            android:text="Clear Sky"
+            android:textSize="20dp"
             app:layout_constraintBottom_toTopOf="@+id/textViewPressureFinal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
@@ -63,13 +78,12 @@
 
         <ImageView
             android:id="@+id/ivIcon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="59dp"
+            android:layout_height="57dp"
             android:layout_marginEnd="112dp"
             android:layout_marginTop="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etPutCity"
-            app:srcCompat="@android:drawable/btn_star_big_on" />
+            app:layout_constraintTop_toBottomOf="@+id/etPutCity" />
 
         <TextView
             android:id="@+id/textViewWindFinal"
@@ -78,6 +92,10 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:text="Wind:"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+
             app:layout_constraintBottom_toTopOf="@+id/tvWind"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -89,6 +107,10 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="Pressure:"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+
             app:layout_constraintBottom_toTopOf="@+id/tvPressure"
             app:layout_constraintEnd_toStartOf="@+id/textViewvHumidityFinal"
             app:layout_constraintStart_toEndOf="@+id/textViewWindFinal" />
@@ -100,6 +122,10 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:text="Humidity:"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+
             app:layout_constraintBottom_toTopOf="@+id/tvHumidity"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -107,9 +133,12 @@
             android:id="@+id/tvWind"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginStart="8dp"
-            android:text="21.5"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -117,33 +146,47 @@
             android:id="@+id/tvPressure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:text="483.7"
+            android:fontFamily="monospace"
+            android:textColor="@color/colorAccent"
+
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tvHumidity"
+            app:layout_constraintHorizontal_bias="0.43"
             app:layout_constraintStart_toEndOf="@+id/tvWind" />
 
         <TextView
             android:id="@+id/tvHumidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="51 %"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="32dp"
+            android:fontFamily="monospace"
+
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
     <TextView
         android:id="@+id/textView5DayWeatherForecastFinal"
+        android:background="@drawable/fon_adapter"
+        android:fontFamily="monospace"
+        android:textStyle="bold"
+        android:textColor="@color/colorAccent"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="5 day weather forecast:" />
+        android:layout_height="20dp"
+        android:gravity="center"
+        android:text="@string/_5_day_forecast" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
+        android:background="@drawable/fon_adapter"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
