--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/tvDescWidget"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="8dp"
         android:gravity="center"
@@ -31,30 +31,6 @@
         android:gravity="center"
         android:textColor="#ffffff"
         android:textSize="20sp" />
-    <!--<LinearLayout-->
-        <!--android:layout_width="86dp"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_weight="1"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/tvDescWidget"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:textColor="#ffffff"-->
-            <!--android:textSize="20sp"></TextView>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/tvCityWidget"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:textColor="#ffffff"-->
-            <!--android:textSize="15sp" />-->
-    <!--</LinearLayout>-->
 
 
 </LinearLayout>
