--- a/app/src/main/res/xml/widget_metadata.xml
+++ b/app/src/main/res/xml/widget_metadata.xml
@@ -5,5 +5,6 @@
     android:minHeight="40dp"
     android:minWidth="250dp"
     android:updatePeriodMillis="60000"
-    android:configure="ainullov.kamil.com.weatherforecastusingretrofit.widget.ConfigActivity">
+    android:configure="ainullov.kamil.com.weatherforecastusingretrofit.widget.ConfigActivity"
+    android:widgetCategory="home_screen|keyguard">>
 </appwidget-provider>
