--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -30,7 +30,7 @@
             android:fontFamily="monospace"
             android:gravity="center"
             android:layout_weight="1"
-            android:text="light intensity shower"
+            android:text="Clear Sky"
             android:textColor="#ffffff"
             android:textSize="15sp" />
 
@@ -42,7 +42,7 @@
             android:gravity="center"
             android:fontFamily="monospace"
             android:layout_weight="2"
-            android:text="Санкт-Петербург"
+            android:text="Moscow"
             android:textColor="#ffffff"
             android:textSize="10sp" />
     </LinearLayout>
